force-app/main/default/objects/Opportunity/fields/ImporteMejorasAutomatico__c.field-meta.xml
<CustomField>
    <fullName>ImporteMejorasAutomatico__c</fullName>
    <description>Rollup summary sobre Mejoras Oportunidad</description>
    <label>Importe mejoras automático</label>
    <summarizedField>MejoraOportunidad__c.Precio_Total__c</summarizedField>
    <summaryForeignKey>MejoraOportunidad__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>