force-app/main/default/objects/Opportunity/fields/ImporteTotalFacturas__c.field-meta.xml
<CustomField>
    <fullName>ImporteTotalFacturas__c</fullName>
    <formula>TotalFacturasEscrituracion__c -  TotalFacturaDevueltasImpagadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Total Facturas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>