force-app/main/default/objects/Opportunity/fields/InformacionParticipante__c.field-meta.xml
<CustomField>
    <fullName>InformacionParticipante__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si la información del campo &quot;Estado civil&quot; del participante esta completo y si es igual a &quot;casado&quot; también se rellene el campo &quot;Régimen&quot;</description>
    <label>Información del participante</label>
    <type>Checkbox</type>
</CustomField>