force-app/main/default/objects/Opportunity/fields/Intereses__c.field-meta.xml
<CustomField>
    <fullName>Intereses__c</fullName>
    <label>Intereses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>