force-app/main/default/objects/Opportunity/fields/InterestedInteriorDesign__c.field-meta.xml
<CustomField>
    <fullName>InterestedInteriorDesign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesado en interiorismo</label>
    <type>Checkbox</type>
</CustomField>