force-app/main/default/objects/Opportunity/fields/LastStageName__c.field-meta.xml
<CustomField>
    <fullName>LastStageName__c</fullName>
    <label>LastStageName</label>
    <length>55</length>
    <type>Text</type>
</CustomField>