force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motivo de pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Ubicación</fullName>
            </value>
            <value>
                <fullName>Financiación</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Fecha de Entrega</fullName>
            </value>
            <value>
                <fullName>Tipología</fullName>
            </value>
            <value>
                <fullName>Tamaño</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>