force-app/main/default/objects/Opportunity/fields/Medio_de_conocimiento__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_conocimiento__c</fullName>
    <label>Origen de Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medio_de_conocimiento</valueSetName>
    </valueSet>
</CustomField>