force-app/main/default/objects/Opportunity/fields/Medio_de_procedencia__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_procedencia__c</fullName>
    <label>Medio de procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PUNTO DE VENTA</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>PUBLICIDAD EXTERIOR</fullName>
            </value>
            <value>
                <fullName>PUBICIDAD EN SUELO</fullName>
            </value>
            <value>
                <fullName>PORTALES VERTICALES</fullName>
            </value>
            <value>
                <fullName>INTERNET CAMPAÑAS</fullName>
            </value>
            <value>
                <fullName>INTERNET PROPIOS</fullName>
            </value>
            <value>
                <fullName>ACCIONES ESPECIALES</fullName>
            </value>
            <value>
                <fullName>PRENSA, REVISTAS</fullName>
            </value>
            <value>
                <fullName>RECOMENDACIÓN</fullName>
            </value>
            <value>
                <fullName>MARKETING DIRECTO</fullName>
            </value>
            <value>
                <fullName>RADIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>