force-app/main/default/objects/Opportunity/fields/MediodePagoCargaHipotecaria__c.field-meta.xml
<CustomField>
    <fullName>MediodePagoCargaHipotecaria__c</fullName>
    <label>Medio de Pago Carga Hipotecaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque bancario</fullName>
            </value>
            <value>
                <fullName>Transferencia OMF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>