force-app/main/default/objects/Opportunity/fields/Mes_Fijo__c.field-meta.xml
<CustomField>
    <fullName>Mes_Fijo__c</fullName>
    <label>Mes Fijo</label>
    <type>Date</type>
</CustomField>