force-app/main/default/objects/Opportunity/fields/MetodoDeCobro__c.field-meta.xml
<CustomField>
    <fullName>MetodoDeCobro__c</fullName>
    <label>Método de cobro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECIBO</fullName>
                <default>true</default>
                <label>RECIBO</label>
            </value>
            <value>
                <fullName>TRANSFERENCIA</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>