force-app/main/default/objects/Opportunity/fields/Mostrar_Resolucion_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Resolucion_Reserva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Resolución Reserva</label>
    <type>Checkbox</type>
</CustomField>