force-app/main/default/objects/Opportunity/fields/N_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>N_Cuotas__c</fullName>
    <inlineHelpText>Número de cuotas entre la Fecha de primera cuota y el mes anterior a la Fecha de Escrituración</inlineHelpText>
    <label>Nº Cuotas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>