force-app/main/default/objects/Opportunity/fields/N_mero_SEPA__c.field-meta.xml
<CustomField>
    <fullName>N_mero_SEPA__c</fullName>
    <label>Número SEPA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>