force-app/main/default/objects/Opportunity/fields/N_pagos__c.field-meta.xml
<CustomField>
    <fullName>N_pagos__c</fullName>
    <label>Nº pagos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>