force-app/main/default/objects/Opportunity/fields/NCuentaBancariaVendedor__c.field-meta.xml
<CustomField>
    <fullName>NCuentaBancariaVendedor__c</fullName>
    <formula>Promocion__r.Numero_de_cuenta_bancaria_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº Cuenta Bancaria Vendedor</label>
    <type>Text</type>
</CustomField>