force-app/main/default/objects/Opportunity/fields/NSocio__c.field-meta.xml
<CustomField>
    <fullName>NSocio__c</fullName>
    <description>Solo a cooperativas</description>
    <label>Nº de Socio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>