force-app/main/default/objects/Opportunity/fields/Numero_de_mandato__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_mandato__c</fullName>
    <label>Número de mandato SEPA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>