force-app/main/default/objects/Opportunity/fields/Observaciones_Resultado_PBC__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Resultado_PBC__c</fullName>
    <label>Observaciones Resultado PBC</label>
    <type>TextArea</type>
</CustomField>