force-app/main/default/objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <description>Número de la oportunidad</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número de oportunidad</label>
    <type>AutoNumber</type>
</CustomField>