force-app/main/default/objects/Opportunity/fields/Pago_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Pago_Contrato__c</fullName>
    <label>% Pago Plan de pagos</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>