force-app/main/default/objects/Opportunity/fields/Pago_Contrato_al_contado__c.field-meta.xml
<CustomField>
    <fullName>Pago_Contrato_al_contado__c</fullName>
    <label>% Pago Firma Contrato</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>