force-app/main/default/objects/Opportunity/fields/Pago_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Pago_Escritura__c</fullName>
    <label>% Pago Escritura</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>