force-app/main/default/objects/Opportunity/fields/Pago_Reserva_p__c.field-meta.xml
<CustomField>
    <fullName>Pago_Reserva_p__c</fullName>
    <label>% Pago Reserva</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>