force-app/main/default/objects/Opportunity/fields/Penalizacion_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Penalizacion_Contrato__c</fullName>
    <label>% Penalización Contrato</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>