force-app/main/default/objects/Opportunity/fields/Penalizacion_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Penalizacion_Escritura__c</fullName>
    <label>% Penalización Escritura</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>