force-app/main/default/objects/Opportunity/fields/Penalizacion_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Penalizacion_Reserva__c</fullName>
    <label>% Penalización Reserva</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>