force-app/main/default/objects/Opportunity/fields/Perio_Precios__c.field-meta.xml
<CustomField>
    <fullName>Perio_Precios__c</fullName>
    <label>Perio Precios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>