force-app/main/default/objects/Opportunity/fields/Periodo_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Reserva__c</fullName>
    <label>Periodo de Reserva</label>
    <type>Date</type>
</CustomField>