force-app/main/default/objects/Opportunity/fields/Personalizacion__c.field-meta.xml
<CustomField>
    <fullName>Personalizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalización</label>
    <type>Checkbox</type>
</CustomField>