force-app/main/default/objects/Opportunity/fields/Plan_de_pagos_creado__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_pagos_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan de pagos creado</label>
    <type>Checkbox</type>
</CustomField>