force-app/main/default/objects/Opportunity/fields/Porcentaje_IVA__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_IVA__c</fullName>
    <label>Porcentaje impuesto</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>