force-app/main/default/objects/Opportunity/fields/Promocion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promocion_Name__c</fullName>
    <formula>Promocion__r.Name</formula>
    <label>Promocion Name</label>
    <type>Text</type>
</CustomField>