force-app/main/default/objects/Opportunity/fields/PromocionFinalizada__c.field-meta.xml
<CustomField>
    <fullName>PromocionFinalizada__c</fullName>
    <formula>Promocion__r.PromocionFinalizada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoción finalizada</label>
    <type>Checkbox</type>
</CustomField>