force-app/main/default/objects/Opportunity/fields/PromocionInactiva__c.field-meta.xml
<CustomField>
    <fullName>PromocionInactiva__c</fullName>
    <formula>Promocion__r.PromocionInactiva__c</formula>
    <label>Promoción inactiva</label>
    <type>Checkbox</type>
</CustomField>