force-app/main/default/objects/Opportunity/fields/Provisionfondoshipoteca__c.field-meta.xml
<CustomField>
    <fullName>Provisionfondoshipoteca__c</fullName>
    <label>Provisión fondos hipoteca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>