force-app/main/default/objects/Opportunity/fields/ProvisionfondoshipotecaIVA__c.field-meta.xml
<CustomField>
    <fullName>ProvisionfondoshipotecaIVA__c</fullName>
    <formula>Provisionfondoshipoteca__c *  Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisión fondos hipoteca IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>