force-app/main/default/objects/Opportunity/fields/ProvisionfondoshipotecaTOTAL__c.field-meta.xml
<CustomField>
    <fullName>ProvisionfondoshipotecaTOTAL__c</fullName>
    <formula>Provisionfondoshipoteca__c +  ProvisionfondoshipotecaIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisión fondos hipoteca TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>