force-app/main/default/objects/Opportunity/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <label>Importe Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>