force-app/main/default/objects/Opportunity/fields/Resultado_PBC__c.field-meta.xml
<CustomField>
    <fullName>Resultado_PBC__c</fullName>
    <label>Resultado PBC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Resultado_Oportunidad_PBC</valueSetName>
    </valueSet>
</CustomField>