force-app/main/default/objects/Opportunity/fields/Riesgo_PBC_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_PBC_Operacion__c</fullName>
    <label>Riesgo PBC Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Prohibido</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Alto</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medio</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Bajo</label>
            </value>
            <value>
                <fullName>ALTO</fullName>
                <isActive>false</isActive>
                <label>ALTO</label>
            </value>
            <value>
                <fullName>BAJO</fullName>
                <isActive>false</isActive>
                <label>BAJO</label>
            </value>
            <value>
                <fullName>MEDIO</fullName>
                <isActive>false</isActive>
                <label>MEDIO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>