force-app/main/default/objects/Opportunity/fields/Ritmo_de_ventas_caida__c.field-meta.xml
<CustomField>
    <fullName>Ritmo_de_ventas_caida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ritmo de ventas (caída)</label>
    <referenceTo>Ritmo_ventas__c</referenceTo>
    <relationshipLabel>Oportunidaes (caída)</relationshipLabel>
    <relationshipName>Oportunidades_caidas</relationshipName>
    <type>Lookup</type>
</CustomField>