force-app/main/default/objects/Opportunity/fields/Ritmo_de_ventas_venta__c.field-meta.xml
<CustomField>
    <fullName>Ritmo_de_ventas_venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ritmo de ventas (venta)</label>
    <referenceTo>Ritmo_ventas__c</referenceTo>
    <relationshipLabel>Oportunidades (ventas)</relationshipLabel>
    <relationshipName>Oportunidades_ventas</relationshipName>
    <type>Lookup</type>
</CustomField>