force-app/main/default/objects/Opportunity/fields/Secuencial_Cuenta_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Secuencial_Cuenta_Bancaria__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Secuencial Cuenta Bancaria</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>