force-app/main/default/objects/Opportunity/fields/Tipo_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Reserva__c</fullName>
    <label>Tipo de Reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserva con IVA</fullName>
            </value>
            <value>
                <fullName>Reserva sin IVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>