force-app/main/default/objects/Opportunity/fields/TipoImpuesto__c.field-meta.xml
<CustomField>
    <fullName>TipoImpuesto__c</fullName>
    <label>Tipo de impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoImpuesto</valueSetName>
    </valueSet>
</CustomField>