force-app/main/default/objects/Opportunity/fields/Titular_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Titular_de_la_cuenta__c</fullName>
    <label>Titular de la cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>