force-app/main/default/objects/Opportunity/fields/TitularidadCuentaVendedor__c.field-meta.xml
<CustomField>
    <fullName>TitularidadCuentaVendedor__c</fullName>
    <formula>Promocion__r.Titularidad_de_la_cuenta1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titularidad Cuenta Vendedor</label>
    <type>Text</type>
</CustomField>