force-app/main/default/objects/Opportunity/fields/Total_Intereses__c.field-meta.xml
<CustomField>
    <fullName>Total_Intereses__c</fullName>
    <label>Total Intereses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>