force-app/main/default/objects/Opportunity/fields/TotalFacturaDevueltasImpagadas__c.field-meta.xml
<CustomField>
    <fullName>TotalFacturaDevueltasImpagadas__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Campo para la plantilla escrituración Conga</description>
    <label>Total Factura Devueltas Impagadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>