force-app/main/default/objects/Opportunity/fields/Uso_de_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Uso_de_Inmueble__c</fullName>
    <label>Uso de Inmueble</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ResidenciaPrimerAcceso</fullName>
                <label>1ª Residencia (Primer acceso)</label>
            </value>
            <value>
                <fullName>1ResidenciaReposicion</fullName>
                <label>1ª Residencia (Reposición)</label>
            </value>
            <value>
                <fullName>1ResidenciaInversion</fullName>
                <label>1ª Residencia (Inversión)</label>
            </value>
            <value>
                <fullName>2ResidenciaUsoPropio</fullName>
                <label>2ª Residencia (Uso propio)</label>
            </value>
            <value>
                <fullName>2ResidenciaInversion</fullName>
                <label>2ª Residencia (Inversión)</label>
            </value>
            <value>
                <fullName>Actividad profesional/empesarial</fullName>
                <isActive>false</isActive>
                <label>Actividad profesional/empesarial</label>
            </value>
            <value>
                <fullName>Inversión</fullName>
                <isActive>false</isActive>
                <label>Inversión</label>
            </value>
            <value>
                <fullName>Otros (especificar)</fullName>
                <isActive>false</isActive>
                <label>Otros (especificar)</label>
            </value>
            <value>
                <fullName>Primera Vivienda</fullName>
                <isActive>false</isActive>
                <label>Primera Vivienda</label>
            </value>
            <value>
                <fullName>Residencial</fullName>
                <isActive>false</isActive>
                <label>Residencial</label>
            </value>
            <value>
                <fullName>Segunda Vivienda</fullName>
                <isActive>false</isActive>
                <label>Segunda Vivienda</label>
            </value>
            <value>
                <fullName>Vacacional</fullName>
                <isActive>false</isActive>
                <label>Vacacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>