force-app/main/default/objects/Opportunity/fields/Validez_desde__c.field-meta.xml
<CustomField>
    <fullName>Validez_desde__c</fullName>
    <label>Validez desde</label>
    <type>Date</type>
</CustomField>