force-app/main/default/objects/Opportunity/fields/Validez_hasta__c.field-meta.xml
<CustomField>
    <fullName>Validez_hasta__c</fullName>
    <label>Validez hasta</label>
    <type>Date</type>
</CustomField>