force-app/main/default/objects/Opportunity/fields/ventaLocal__c.field-meta.xml
<CustomField>
    <fullName>ventaLocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ventaLocal</label>
    <type>Checkbox</type>
</CustomField>