force-app/main/default/objects/Opportunity/fields/VentaMasiva__c.field-meta.xml
<CustomField>
    <fullName>VentaMasiva__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si el límite de inmuebles por oportunidad debe eliminarse incluiyendo tantos productos como se desee en una misma oportunidad.</description>
    <label>Venta masiva</label>
    <type>Checkbox</type>
</CustomField>