force-app/main/default/objects/Opportunity/fields/Verificando_PBC__c.field-meta.xml
<CustomField>
    <fullName>Verificando_PBC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verificando PBC</label>
    <type>Checkbox</type>
</CustomField>