force-app/main/default/objects/Opportunity/validationRules/CuentasBancariasObligatorias.validationRule-meta.xml
<ValidationRule>
    <fullName>CuentasBancariasObligatorias</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(StageName , &apos;Presupuesto&apos;)),
NOT(ISPICKVAL(StageName , &apos;Pre-Reserva&apos;)),
NOT(ISPICKVAL(StageName , &apos;Cancelada&apos;)),
NOT(ISPICKVAL(Cuentas__c, &apos;Cuentas Operativas&apos;)),
NOT(ISPICKVAL(Cuentas__c, &apos;Cuentas Especiales&apos;))
)</errorConditionFormula>
    <errorDisplayField>Cuentas__c</errorDisplayField>
    <errorMessage>Debe rellenar el campo &quot;Cuentas Bancarias&quot;</errorMessage>
</ValidationRule>