force-app/main/default/objects/Opportunity/validationRules/Datos_de_mandato_obligatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>Datos_de_mandato_obligatorios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( StageName ),
 ISPICKVAL( StageName , &quot;Contrato&quot;),
	 $User.ProfileId != &apos;00ef2000001aiAs&apos;
,

OR(
 ISBLANK( Cuenta_Bancaria_de_mandato__c ),
 ISBLANK( BIC_Cuenta_cliente__c ) 
)

)</errorConditionFormula>
    <errorMessage>Rellene los siguientes campos obligatorios: BIC e IBAN</errorMessage>
</ValidationRule>