force-app/main/default/objects/Opportunity/validationRules/Fecha_de_primera_cuota_el_dia_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_primera_cuota_el_dia_1</fullName>
    <active>true</active>
    <errorConditionFormula>DAY (Fecha_de_primera_cuota__c) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>La fecha de primera cuota tiene que ser el día 1</errorMessage>
</ValidationRule>