force-app/main/default/objects/Opportunity/validationRules/Fecha_de_primera_cuota_mayor_a_hoy.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_primera_cuota_mayor_a_hoy</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( Fecha_de_primera_cuota__c ),
 Fecha_de_primera_cuota__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>La fecha de primera cuota tiene que ser mayor a HOY.</errorMessage>
</ValidationRule>