force-app/main/default/objects/Opportunity/validationRules/FechaEscrituracion_mayor_a_Fecha1cuota.validationRule-meta.xml
<ValidationRule>
    <fullName>FechaEscrituracion_mayor_a_Fecha1cuota</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_de_Escrituracion__c &lt;= Fecha_de_primera_cuota__c</errorConditionFormula>
    <errorMessage>La Fecha de Escrituración debe de ser mayor a la Fecha de primera cuota</errorMessage>
</ValidationRule>