force-app/main/default/objects/Opportunity/validationRules/Firma_contrato_para_avanzar.validationRule-meta.xml
<ValidationRule>
    <fullName>Firma_contrato_para_avanzar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(StageName), &apos;Contrato&apos;),
ISPICKVAL(StageName, &apos;Plan de pagos&apos;),
NOT(Contrato_Compraventa_firmado__c)
)</errorConditionFormula>
    <errorDisplayField>Contrato_Compraventa_firmado__c</errorDisplayField>
    <errorMessage>Hay que firmar el contrato de compraventa antes de avanzar la oportunidad.</errorMessage>
</ValidationRule>