force-app/main/default/objects/Opportunity/validationRules/Indicar_Importe_Cuota_Extra.validationRule-meta.xml
<ValidationRule>
    <fullName>Indicar_Importe_Cuota_Extra</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT( ISNULL(Numero_Cuotas_Extra__c)),
Numero_Cuotas_Extra__c &lt;&gt; 0,
 ISNULL( Importe_Cuota_Extra__c ) 
)</errorConditionFormula>
    <errorMessage>Existen Cuotas Extra, Indique el Importe de Cuota Extra</errorMessage>
</ValidationRule>